adding toxic comment preprocessing notebook

--- a/src/tasks/task-1-data-pre-processing/scripts/Data Preprocessing - Toxic Comment Classification dataset - KAGGLE.ipynb
+++ b/src/tasks/task-1-data-pre-processing/scripts/Data Preprocessing - Toxic Comment Classification dataset - KAGGLE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "698b861f",
    "metadata": {},
    "outputs": [],
@@ -849,8 +849,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "b5835955",
+   "execution_count": 23,
+   "id": "3ff9aa2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,8 +873,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "9bf5eb45",
+   "execution_count": 24,
+   "id": "db8cb1a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,12 +883,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 25,
    "id": "70510cf5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#select only the comment text column\n",
+    "#select only the cleaned_texts column\n",
     "texts = df['cleaned_texts']\n",
     "#convert to dataframe\n",
     "texts = pd.DataFrame(texts)\n",
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 26,
    "id": "c2a50a16",
    "metadata": {},
    "outputs": [],
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 27,
    "id": "329760a4",
    "metadata": {},
    "outputs": [],
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 47,
    "id": "e7d752a0",
    "metadata": {},
    "outputs": [],
@@ -947,14 +947,52 @@
     "    \"\"\"\n",
     "    print('RAW TEXT')\n",
     "    print(df.loc[index]['comment_text'])\n",
-    "    print('\\n')\n",
+    "    print('\\n\\n')\n",
     "    print('CLEANED TEXT FOR TRAINING')\n",
     "    print(df.loc[index]['clean_sentence_training'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 48,
+   "id": "9ea2f135",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RAW TEXT\n",
+      "You are gay or antisemmitian? \n",
+      "\n",
+      "Archangel WHite Tiger\n",
+      "\n",
+      "Meow! Greetingshhh!\n",
+      "\n",
+      "Uh, there are two ways, why you do erased my comment about WW2, that holocaust was brutally slaying of Jews and not gays/Gypsys/Slavs/anyone...\n",
+      "\n",
+      "1 - If you are anti-semitian, than shave your head bald and go to the skinhead meetings!\n",
+      "\n",
+      "2 - If you doubt words of the Bible, that homosexuality is a deadly sin, make a pentagram tatoo on your forehead go to the satanistic masses with your gay pals!\n",
+      "\n",
+      "3 - First and last warning, you fucking gay - I won't appreciate if any more nazi shwain would write in my page! I don't wish to talk to you anymore!\n",
+      "\n",
+      "Beware of the Dark Side!\n",
+      "\n",
+      "\n",
+      "\n",
+      "CLEANED TEXT FOR TRAINING\n",
+      "You gay antisemmitian Archangel WHite Tiger Meow Greetingshhh Uh two way erased comment WW holocaust brutally slaying Jews gay Gypsys Slavs anyone If anti semitian shave head bald go skinhead meeting If doubt word Bible homosexuality deadly sin make pentagram tatoo forehead go satanistic mass gay pal First last warning fucking gay I appreciate nazi shwain would write page I wish talk anymore Beware Dark Side\n"
+     ]
+    }
+   ],
+   "source": [
+    "compare(df, 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "id": "e4dcd8d9",
    "metadata": {},
    "outputs": [],
@@ -974,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 50,
    "id": "8be6e9f8",
    "metadata": {},
    "outputs": [
@@ -984,7 +1022,7 @@
        "''"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 51,
    "id": "85285f8f",
    "metadata": {},
    "outputs": [],
@@ -1006,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 52,
    "id": "f73b5f5b",
    "metadata": {},
    "outputs": [],
@@ -1017,8 +1055,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "1013e484",
+   "execution_count": 53,
+   "id": "947c8a2d",
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1151,7 @@
        "1  Toxic Comment Classification Challenge  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 54,
    "id": "9655bb30",
    "metadata": {},
    "outputs": [],
@@ -1135,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 55,
    "id": "f3f67492",
    "metadata": {},
    "outputs": [],
@@ -1146,8 +1184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "1be16eb5",
+   "execution_count": 56,
+   "id": "af0794d5",
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1366,7 @@
        "[223549 rows x 5 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,13 +1377,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "id": "2c1978ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "#saves to disk\n",
-    "df.to_csv('Toxic Comment Classification Challenge.csv')"
+    "#df.to_csv('Toxic Comment Classification Challenge.csv')"
    ]
   },
   {
