Updated mendeley_dataset with additional column

--- a/src/tasks/task-1-data-pre-processing/scripts/clean_mendeley_hatespeech_dataset.ipynb
+++ b/src/tasks/task-1-data-pre-processing/scripts/clean_mendeley_hatespeech_dataset.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "41e04ddb",
    "metadata": {},
    "outputs": [
@@ -136,29 +136,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>789983</th>\n",
-       "      <td>@user Shut the fuck up you horrible cunt</td>\n",
+       "      <th>703487</th>\n",
+       "      <td>no one will ever stop me saying nigger is a ho...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>680481</th>\n",
+       "      <td>I'm out of all my fucking meds bc my family th...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>370485</th>\n",
+       "      <td>`  :Well that is not correct. If you are unwil...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>584459</th>\n",
+       "      <td>Alpha Phi Alpha and Kappa Alpha Psi \\n\\nI beli...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122606</th>\n",
+       "      <td>== NAZIS RAUS ==  SHUT THIS NAZI NIXER UP</td>\n",
        "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12634</th>\n",
-       "      <td>BTW, there's this dipshit (his name is LILVOKA...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>349149</th>\n",
-       "      <td>== Clarifying .. ==  Hi there !  I just want...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>411745</th>\n",
-       "      <td>@sschinke @teh_maxh it sets a bad precedent.</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>577154</th>\n",
-       "      <td>I think we should further develop the pagan-or...</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -166,11 +166,11 @@
       ],
       "text/plain": [
        "                                                  Content  Label\n",
-       "789983           @user Shut the fuck up you horrible cunt      1\n",
-       "12634   BTW, there's this dipshit (his name is LILVOKA...      1\n",
-       "349149    == Clarifying .. ==  Hi there !  I just want...      0\n",
-       "411745       @sschinke @teh_maxh it sets a bad precedent.      0\n",
-       "577154  I think we should further develop the pagan-or...      0"
+       "703487  no one will ever stop me saying nigger is a ho...      0\n",
+       "680481  I'm out of all my fucking meds bc my family th...      0\n",
+       "370485  `  :Well that is not correct. If you are unwil...      0\n",
+       "584459  Alpha Phi Alpha and Kappa Alpha Psi \\n\\nI beli...      0\n",
+       "122606          == NAZIS RAUS ==  SHUT THIS NAZI NIXER UP      1"
       ]
      },
      "metadata": {},
@@ -186,25 +186,64 @@
     }
    ],
    "source": [
-    "data = file_to_df('data_huang_devansh.csv')"
+    "data = file_to_df('E:\\Temp\\data_huang_devansh.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5a02ac90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: nltk in e:\\software\\anaconda3\\lib\\site-packages (3.7)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in e:\\software\\anaconda3\\lib\\site-packages (from nltk) (2022.3.15)\n",
+      "Requirement already satisfied: click in e:\\software\\anaconda3\\lib\\site-packages (from nltk) (8.0.4)\n",
+      "Requirement already satisfied: tqdm in e:\\software\\anaconda3\\lib\\site-packages (from nltk) (4.64.0)\n",
+      "Requirement already satisfied: joblib in e:\\software\\anaconda3\\lib\\site-packages (from nltk) (1.1.0)\n",
+      "Requirement already satisfied: colorama in e:\\software\\anaconda3\\lib\\site-packages (from click->nltk) (0.4.4)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install nltk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d73fecea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\MSS\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\MSS\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package omw-1.4 to\n",
+      "[nltk_data]     C:\\Users\\MSS\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import nltk\n",
     "nltk.download('stopwords')\n",
@@ -214,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e2e4c5d2",
    "metadata": {},
    "outputs": [
@@ -234,7 +273,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
+   "id": "6ead3cc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting emoji\n",
+      "  Downloading emoji-2.2.0.tar.gz (240 kB)\n",
+      "Building wheels for collected packages: emoji\n",
+      "  Building wheel for emoji (setup.py): started\n",
+      "  Building wheel for emoji (setup.py): finished with status 'done'\n",
+      "  Created wheel for emoji: filename=emoji-2.2.0-py3-none-any.whl size=234927 sha256=1beb1b4dd4bde8381249ac904ba82b4992c7db14f7f2c4f84edc96ac246694ab\n",
+      "  Stored in directory: c:\\users\\mss\\appdata\\local\\pip\\cache\\wheels\\9a\\b8\\0f\\f580817231cbf59f6ade9fd132ff60ada1de9f7dc85521f857\n",
+      "Successfully built emoji\n",
+      "Installing collected packages: emoji\n",
+      "Successfully installed emoji-2.2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install emoji "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b354a7aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import emoji"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "83e58736",
    "metadata": {},
    "outputs": [
@@ -245,15 +321,15 @@
       "\n",
       "****** Start Dataframe Details ******\n",
       "Dataframe Shape is \n",
-      "(560881, 2)\n",
+      "(560879, 2)\n",
       "Dataframe Info is \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 560881 entries, 0 to 839518\n",
+      "Int64Index: 560879 entries, 0 to 839518\n",
       "Data columns (total 2 columns):\n",
       " #   Column   Non-Null Count   Dtype \n",
       "---  ------   --------------   ----- \n",
       " 0   Content  560879 non-null  object\n",
-      " 1   Label    560881 non-null  int64 \n",
+      " 1   Label    560879 non-null  int64 \n",
       "dtypes: int64(1), object(1)\n",
       "memory usage: 12.8+ MB\n",
       "None\n",
@@ -287,28 +363,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>411804</th>\n",
-       "      <td>RT @freddydeknatel: \"credible reports that Ira...</td>\n",
+       "      <th>501577</th>\n",
+       "      <td>put on the lord jesus christ, and make no prov...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>564832</th>\n",
-       "      <td>\"\\n\\n Corsi's \"\"apology\"\" for remarks on FR \\n...</td>\n",
+       "      <th>37393</th>\n",
+       "      <td>== red flag baloney ==  baloney is what your m...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406013</th>\n",
+       "      <td>They barely cooked anything on that entrée #MKR</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>558163</th>\n",
-       "      <td>\"\\n\\n Your sig... \\n\\nI'm curious as to how yo...</td>\n",
+       "      <th>88381</th>\n",
+       "      <td>Uh can you please change the name? this is not...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>510772</th>\n",
-       "      <td>\"\\n\\n National Archives ExtravaSCANza \\nYou ar...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>342462</th>\n",
-       "      <td>::I think the notability comes from the notab...</td>\n",
+       "      <th>54023</th>\n",
+       "      <td>== The lunchlady drowned last February. ==  Th...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -317,11 +393,11 @@
       ],
       "text/plain": [
        "                                                  Content  Label\n",
-       "411804  RT @freddydeknatel: \"credible reports that Ira...      0\n",
-       "564832  \"\\n\\n Corsi's \"\"apology\"\" for remarks on FR \\n...      0\n",
-       "558163  \"\\n\\n Your sig... \\n\\nI'm curious as to how yo...      0\n",
-       "510772  \"\\n\\n National Archives ExtravaSCANza \\nYou ar...      0\n",
-       "342462   ::I think the notability comes from the notab...      0"
+       "501577  put on the lord jesus christ, and make no prov...      0\n",
+       "37393   == red flag baloney ==  baloney is what your m...      1\n",
+       "406013    They barely cooked anything on that entrée #MKR      0\n",
+       "88381   Uh can you please change the name? this is not...      0\n",
+       "54023   == The lunchlady drowned last February. ==  Th...      0"
       ]
      },
      "metadata": {},
@@ -343,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "dccd6ae1",
    "metadata": {},
    "outputs": [
@@ -353,7 +429,7 @@
        "(560879, 2)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "3eadb3d2",
    "metadata": {},
    "outputs": [],
@@ -377,7 +453,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
+   "id": "2d9507e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FOLDER_NAME='mendeley_dataset'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "7152f595",
    "metadata": {},
    "outputs": [
@@ -402,33 +488,81 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>content</th>\n",
+       "      <th>corpus_name</th>\n",
+       "      <th>raw_sentence</th>\n",
        "      <th>label</th>\n",
+       "      <th>clean_sentence_training</th>\n",
+       "      <th>clean_sentence_EDA</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>208905</th>\n",
-       "      <td>caught bothering something I long learned bother</td>\n",
+       "      <th>503101</th>\n",
+       "      <td>mendeley_dataset</td>\n",
+       "      <td>U Lil stupid ass bitch I aint fucking wit youu...</td>\n",
        "      <td>0</td>\n",
+       "      <td>U Lil stupid as bitch I aint fucking wit youuuu</td>\n",
+       "      <td>U Lil stupid as bitch I aint fucking wit youuuu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>348833</th>\n",
+       "      <td>mendeley_dataset</td>\n",
+       "      <td>Thanks for advise \\n\\nThanks you for your advi...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Thanks advise Thanks advice use picture</td>\n",
+       "      <td>Thanks advise Thanks advice use picture</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145444</th>\n",
+       "      <td>mendeley_dataset</td>\n",
+       "      <td>==Will she be the official Queen?== I cannot ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Will official Queen I cannot see Henry VIII ma...</td>\n",
+       "      <td>Will official Queen I cannot see Henry VIII ma...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>312446</th>\n",
+       "      <td>mendeley_dataset</td>\n",
+       "      <td>\"\\nRe the \"\"Hubbard Day\"\", I thought you might...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Re Hubbard Day I thought might like that I see...</td>\n",
+       "      <td>Re Hubbard Day I thought might like that I see...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 content  label\n",
-       "208905  caught bothering something I long learned bother      0"
+       "             corpus_name                                       raw_sentence  \\\n",
+       "503101  mendeley_dataset  U Lil stupid ass bitch I aint fucking wit youu...   \n",
+       "348833  mendeley_dataset  Thanks for advise \\n\\nThanks you for your advi...   \n",
+       "145444  mendeley_dataset   ==Will she be the official Queen?== I cannot ...   \n",
+       "312446  mendeley_dataset  \"\\nRe the \"\"Hubbard Day\"\", I thought you might...   \n",
+       "\n",
+       "        label                            clean_sentence_training  \\\n",
+       "503101      0    U Lil stupid as bitch I aint fucking wit youuuu   \n",
+       "348833      0            Thanks advise Thanks advice use picture   \n",
+       "145444      0  Will official Queen I cannot see Henry VIII ma...   \n",
+       "312446      0  Re Hubbard Day I thought might like that I see...   \n",
+       "\n",
+       "                                       clean_sentence_EDA  \n",
+       "503101    U Lil stupid as bitch I aint fucking wit youuuu  \n",
+       "348833            Thanks advise Thanks advice use picture  \n",
+       "145444  Will official Queen I cannot see Henry VIII ma...  \n",
+       "312446  Re Hubbard Day I thought might like that I see...  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "content=[]\n",
+    "corpus_name=[]\n",
+    "raw_sentence=[]\n",
     "label=[]\n",
+    "clean_sentence_training=[]\n",
+    "clean_sentence_EDA=[]\n",
     "for row in data.values:\n",
     "    new_sentence = \"\"\n",
     "    old_sentence = row[0].split()\n",
@@ -442,21 +576,31 @@
     "            word = re.sub('\\[.*?\\]','', word)\n",
     "            word = re.sub(\"[^A-Za-z]\",'', word)\n",
     "            base_word = wordnet_lemmatizer.lemmatize(word)\n",
-    "            new_sentence = new_sentence + \" \" + base_word \n",
-    "    content.append(new_sentence.strip())\n",
+    "            new_sentence = new_sentence + \" \" + base_word\n",
+    "    corpus_name.append(FOLDER_NA)\n",
+    "    raw_sentence.append(row[0])\n",
     "    label.append(row[1])\n",
+    "    clean_sentence_training.append(new_sentence.strip())\n",
+    "    if (emoji.emoji_count(new_sentence) > 0):\n",
+    "        #print(emoji.emoji_list(new_sentence))\n",
+    "        clean_sentence_EDA.append(emoji.replace_emoji(new_sentence.strip(), ''))\n",
+    "    else:\n",
+    "        clean_sentence_EDA.append(new_sentence.strip())\n",
     "    #break\n",
     "new_df = pd.DataFrame(\n",
-    "    {'content': content,\n",
-    "     'label': label\n",
+    "    {'corpus_name': corpus_name,\n",
+    "     'raw_sentence': raw_sentence,\n",
+    "     'label': label,\n",
+    "     'clean_sentence_training': clean_sentence_training,\n",
+    "     'clean_sentence_EDA': clean_sentence_EDA\n",
     "    })\n",
-    "new_df.sample()\n",
+    "new_df.sample(4)\n",
     "#print(f\"{content} and {label}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "bc20b2f1",
    "metadata": {},
    "outputs": [],
@@ -465,9 +609,9 @@
     "\n",
     "#new_df[new_df['label'] == 0].to_csv('clean_mendeley_hatespeech_dataset_0.csv')\n",
     "#new_df[new_df['label'] == 1].to_csv('clean_mendeley_hatespeech_dataset_1.csv')\n",
-    "for no, chunk in enumerate(np.array_split(new_df, 2)):\n",
+    "for no, chunk in enumerate(np.array_split(new_df, 6)):\n",
     "    suffix = chr(no+65)\n",
-    "    chunk.to_csv(f'clean_mendeley_hatespeech_dataset_part{suffix}.csv')"
+    "    chunk.to_csv(f'../../../data/english/clean-datasets/{FOLDER_NAME}/clean_mendeley_hatespeech_dataset_part{suffix}.csv')"
    ]
   },
   {
