--- a/src/tasks/task-2-exploratory-data-analysis/guidelines-for-EDA/task2-EDA-guidelines.ipynb
+++ b/src/tasks/task-2-exploratory-data-analysis/guidelines-for-EDA/task2-EDA-guidelines.ipynb
@@ -715,7 +715,7 @@
    "hash": "86542dfcd30dcaa99d84c6e4d33cb0a4033de368badbca79a096b5e59f3a5c85"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('NLP')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -729,9 +729,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
-  },
-  "orig_nbformat": 4
+   "version": "3.8.12"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
