--- a/src/tasks/task-1-data-pre-processing/scripts/clean_mendeley_hatespeech_dataset.ipynb
+++ b/src/tasks/task-1-data-pre-processing/scripts/clean_mendeley_hatespeech_dataset.ipynb
@@ -625,7 +625,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -639,7 +639,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13 (main, Aug 25 2022, 18:29:29) \n[Clang 12.0.0 ]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a432ab4d1c5c1cd15d6fcd94a14faed16d323f613c3ab7a3ce2edc62d13f224d"
+   }
   }
  },
  "nbformat": 4,
