--- a/src/tasks/task-2-exploratory-data-analysis/scripts/EDA_mendeley_hatespeech_dataset.ipynb
+++ b/src/tasks/task-2-exploratory-data-analysis/scripts/EDA_mendeley_hatespeech_dataset.ipynb
@@ -1223,7 +1223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <span style=\"font-family: Trebuchet MS; font-weight:bold;font-size:1.0em;color:red;\">  Average sentiment score is negative for hatespeech and positive for non hatespeech. This incline this dataset as one of the good dataset."
+    "## <span style=\"font-family: Trebuchet MS; font-weight:bold;font-size:1.0em;color:red;\">  Average sentiment score is negative for hatespeech and positive for non hatespeech. This iv"
    ]
   },
   {
