Updates Readme.md for task-3

--- a/src/tasks/task-3-feature_engineering/word embeddings.ipynb
+++ b/src/tasks/task-3-feature_engineering/word embeddings.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5afb0ca1",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "74e2c435",
    "metadata": {},
    "outputs": [],
@@ -41,10 +41,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cc084c29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 64598 entries, 0 to 64597\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   raw sentence             64598 non-null  object \n",
+      " 1   clean sentence training  62756 non-null  object \n",
+      " 2   label                    62787 non-null  float64\n",
+      " 3   clean sentence EDA       62787 non-null  object \n",
+      "dtypes: float64(1), object(3)\n",
+      "memory usage: 2.0+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "corpora.info()"
    ]
@@ -52,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03078239",
+   "id": "5820071f",
    "metadata": {},
    "outputs": [],
    "source": []
